--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1431,13 +1431,13 @@ namespace_label_platform:
 namespace_label_preplatform:
   other: "Bits"
 history_commit:
-  other: "[BLUE]commit {{.V0}}[/RESET]\n"
+  other: "[BLUE]commit {{.V0}}[/RESET]"
 history_author:
-  other: "Author: {{.V0}}\n"
+  other: "Author: {{.V0}}"
 history_date:
-  other: "Date: {{.V0}}\n"
+  other: "Date: {{.V0}}"
 history_description:
-  other: "Description: {{.V0}}\n"
+  other: "Description: {{.V0}}"
 history_cmd_description:
   other: View history of the active or given project
 arg_state_history_namespace_description:
