--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -923,7 +923,7 @@ installer_err_runtime_already_exists:
 installer_err_runtime_move_files_access_denied:
   other: |
     Unable to move runtime files.  Please ensure that you have write permissions for the directory '{{.V1}}'
-    Please check the state tool forum for more information and suggestions:
+    If you believe this is happening due to antivirus software please report your issue on our forums: 
     https://community.activestate.com/c/state-tool/9
 installer_err_runtime_move_files_failed:
   other: Unable to move runtime files from '{{.V0}}' to '{{.V1}}'
