--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -920,8 +920,13 @@ installer_err_fail_obtain_prefixes:
   other: Unable to obtain relocation prefixes for runtime '{{.V0}}'
 installer_err_runtime_already_exists:
   other: A runtime is already installed at '{{.V0}}'
+installer_err_runtime_move_files_access_denied:
+  other: |
+    Unable to move runtime files.  Please ensure that you have write permissions for the directory '{{.V1}}'
+    If you believe this is happening due to antivirus software please report your issue on our forums: 
+    https://community.activestate.com/c/state-tool/9
 installer_err_runtime_move_files_failed:
-  other: Unable to move runtime files from '{{.V0}}'
+  other: Unable to move runtime files from '{{.V0}}' to '{{.V1}}'
 installer_err_runtime_rm_installdir:
   other: Unable to remove '{{.V0}}' after unpacking runtime
 installer_err_runtime_no_commitid:
