Consolidate preparing an order

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1406,6 +1406,8 @@ field_organization:
   other: Organization
 request_timed_out:
   other: A request for data took too long - Trying again may help
+err_recipe_payload:
+  other: Expected only one recipe ID
 no_commits:
   other: No commits exist yet for {{.V0}}
 err_orgs_length:
