--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1584,3 +1584,7 @@ err_init_no_language:
   other: "You need to supply the [language] argument, run 'state init --help' for more information."
 err_project_no_commit:
   other: The activatestate.yaml for the project {{.V0}} does not contain a commit ID. If this project was created with 'state init', please run 'state push' and try again.
+err_bad_platform_version:
+  other: You have to supply a platform version.
+platform_added:
+  other: "{{.V0}}@{{.V1}} has been added."
