Do not continue if namespace is empty

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1453,6 +1453,8 @@ history_cmd_description:
   other: View history of the active or given project
 arg_state_history_namespace_description:
   other: "The namespace to view the history for (owner/name)"
+err_history_namespace:
+  other: "Please provide a namespace or run `state history` in a project directory"
 clean_description:
   other: Clean caches, configuration files, or completely remove the state tool
 uninstall_description:
