--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1541,8 +1541,8 @@ flag_state_deploy_path_description:
   other: The path to deploy the runtime installation files to. This directory will not be affected by 'state clean'
 flag_state_deploy_force_description:
   other: "Overwrites any existing files / configurations."
-flag_state_deploy_system_path_description:
-  other: "Updates the system PATH instead of the user level PATH"
+flag_state_deploy_user_path_description:
+  other: "Updates the user PATH instead of the system PATH"
 envdef_file_not_found:
   other: |
     Your installation seems to be corrupted.
