--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1482,9 +1482,9 @@ auto_update_to_version:
     [BLUE]To avoid auto updating run 'state update --lock' (only recommended for production environments).[/RESET]
 auto_update_permission_err:
   other: |
-    [BLUE]Could not update to the latest available version of the state tool due to insufficient permissions.[/RESET]
-    [BLUE]To manually update, run 'state update' as a privileged user.[/RESET]
-    [BLUE]If you want the state tool to auto-update, please re-install it in a user-writable directory.[/RESET]
+    Could not update to the latest available version of the state tool due to insufficient permissions.
+    To manually update, run 'state update' as a privileged user.
+    If you want the state tool to auto-update, please re-install it in a user-writable directory.
 forward_version:
   other: "[BLUE]Using locked state tool version [BOLD]{{.V0}}[/RESET]."
 err_project_env_file_not_exist:
