remove some error transitions

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1581,3 +1581,5 @@ err_getwd:
   other: |
     Could not retrieve your working directory, error received: {{.V0}}.
     If this problem continues please report it on our forums: {{.V1}}
+ppm_install_err:
+  other: Failed to install PPM shim command.
