--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1200,7 +1200,7 @@ package_remove_cmd_description:
   other: Remove a package from your project
 package_import_cmd_description:
   other: Import packages from a list of dependencies
-package_search_description:
+package_search_cmd_description:
   other: Search for available packages that can be added to your project
 package_arg_name:
   other: name
@@ -1258,8 +1258,10 @@ err_obtaining_change_request:
   other: Cannot obtain change request
 package_no_data:
   other: No data found - Please verify the provided commit id
-package_no_packages:
+package_search_no_packages:
   other: Currently no package of the provided name is available on the ActiveState Platform.
+package_list_no_packages:
+  other: The project has not packages to list.
 package_name:
   other: Name
 package_version:
