move ppm shim to hidden state sub-command

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1587,3 +1587,52 @@ err_getwd:
     If this problem continues please report it on our forums: {{.V1}}
 ppm_install_err:
   other: Failed to install PPM shim command.
+ppm_header_message:
+  other: |
+    The Perl Package Manager (PPM) is no longer supported.
+    To manage your Perl packages from the command line, use the State Tool (state) instead. You can find more information on the State Tool at
+    https://www.activestate.com/products/platform/state-tool/
+ppm_print_suggestion:
+  other: |
+    The Perl Package Manager (PPM) is no longer supported.
+    To manage your Perl packages from the command line, use the State Tool (state) instead. You can find more information on the State Tool at
+    https://www.activestate.com/products/platform/state-tool/
+
+    To {{.V0}}, run:
+
+      {{.V1}}
+
+    See "https://docs.activestate.com/platform/{{.V2}}" for details.
+ppm_print_main:
+  other: |
+    The Perl Package Manager (PPM) is no longer supported.
+    To manage your Perl packages from the command line, use the State Tool (state) instead. You can find more information on the State Tool at
+    https://www.activestate.com/products/platform/state-tool/
+
+    To see help for State Tool commands, run:
+
+        state help
+
+    See "https://docs.activestate.com/platform/state/" for details.
+ppm_install_intent:
+  other: add new packages to your project 
+ppm_upgrade_intent:
+  other: upgrade an existing package
+ppm_remove_intent:
+  other: remove a package from your project
+ppm_area_message:
+  other: |
+    The Perl Package Manager (PPM) is no longer supported.
+    To manage your Perl packages from the command line, use the State Tool (state) instead. You can find more information on the State Tool at
+    https://www.activestate.com/products/platform/state-tool/
+
+    To manage several projects with varying dependencies, you can organize them as
+    projects on the ActiveState Platform: https://docs.activestate.com/platform/projects.html.
+
+    To fork an existing project, run:
+    	state fork
+    See https://docs.activestate.com/platform/state/fork.html for details.
+    	
+    To create a new project, see the guide at https://docs.activestate.com/platform/state/start.html for details.
+ppm_list_intent:
+  other: list the packages installed for a project
