Write setenv.bat on deploy configure

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1549,6 +1549,8 @@ deploy_restart_cmd:
   other: |
 
     [BLUE][BOLD]Please log out and back in again in order to start using the newly configured Runtime Environment.[/RESET]
+    [BLUE][BOLD]Alternatively, you can run the following command to reset your environment:[/RESET]
+      {{.V0}}
 flag_state_deploy_path_description:
   other: The path to deploy the runtime installation files to. This directory will not be affected by 'state clean'
 flag_state_deploy_force_description:
