PR review fixes Move insert function to where it is used Don't wrap low level errors Add replace functionality to AddUpdateInfo Remove unused function Simplify regexes Do not introduce new failures Call ParseVersionInfo after updating the as.yaml

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -819,6 +819,8 @@ err_version_parse:
   other:  Could not determine the State Tool version to use to run this command. Please ensure the project field in your activestate.yaml is formatted correctly.
 err_invalid_version:
   other: "Invalid version specified in your activestate.yaml, should be in the format of: {number}.{number}.{number}-{hash}"
+err_update_version:
+  other: "Could not update deprecated version representation"
 downloading_state_version:
   other: "Downloading State Tool version {{.V0}}, as specified by your activestate.yaml (this only needs to happen once for each version you specify)."
 forward_fail:
