--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -548,6 +548,10 @@ show_project:
   other: Show information about a project
 arg_state_show_remote_description:
   other: Namespace of remote project
+show_visibility_private:
+  other: Private
+show_visibility_public:
+  other: Public
 field_namespace:
   other: Namespace
 field_platforms:
