--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1323,8 +1323,8 @@ field_organization:
   other: Organization
 request_timed_out:
   other: A request for data took too long - Trying again may help
-err_recipe_payload:
-  other: Received multiple platform recipes where only one was expected
+err_recipe_platforms:
+  other: Filter returns multiple platform IDs where only one was expected
 no_commits:
   other: No commits exist yet for {{.V0}}
 err_orgs_length:
