Fix spelling mistake

--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -1324,7 +1324,7 @@ field_organization:
 request_timed_out:
   other: A request for data took too long - Trying again may help
 err_recipe_platforms:
-  other: Filter returns multiple platform IDs where only one was expected
+  other: Filter returned multiple platform IDs where only one was expected
 no_commits:
   other: No commits exist yet for {{.V0}}
 err_orgs_length:
