--- a/locale/en-us.yaml
+++ b/locale/en-us.yaml
@@ -985,7 +985,7 @@ export_config_flag_filter_description:
 export_config_dir_description:
   other: Export the config directory details
 err_invalid_filter:
-  other: "Invalid filter specified: '{{.V0}}'; Supported filters: {{.V1}}"
+  other: "Invalid filter term specified: '{{.V0}}'; Supported terms: {{.V1}}"
 export_apikey_user_notice:
   other: "[BLUE]Note that this key is not stored by ActiveState. Please store the value for later use as you cannot retrieve it again.[/RESET]"
 err_apikey_name_required:
